logs/applicake.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/applicake'...
Compiling './lib/python3.5/site-packages/applicake/app.py'...
***   File "./lib/python3.5/site-packages/applicake/app.py", line 144
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/applicake/fdr2probability.py'...
***   File "./lib/python3.5/site-packages/applicake/fdr2probability.py", line 107
    print len(all_peptides_noD)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/applicake/fdr2probabilityDB.py'...
***   File "./lib/python3.5/site-packages/applicake/fdr2probabilityDB.py", line 152
    print self._get_probability(dict.keys()[idx],dict.values()[idx])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/applicake/pepxml2csv.py'...
***   File "./lib/python3.5/site-packages/applicake/pepxml2csv.py", line 65
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/applicake/spectrast.py'...
***   File "./lib/python3.5/site-packages/applicake/spectrast.py", line 27
    return '%s %s -sL%s -sD%s -sO' % (prefix,input_filename,lib_filename,fasta_filename ))
                                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/applicake/tandem.py'...
***   File "./lib/python3.5/site-packages/applicake/tandem.py", line 26
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/applicake/test.py'...
***   File "./lib/python3.5/site-packages/applicake/test.py", line 164
    print uniq_peps
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/applicake/utils.py'...
***   File "./lib/python3.5/site-packages/applicake/utils.py", line 273
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/applicake/workflowinitator.py'...
***   File "./lib/python3.5/site-packages/applicake/workflowinitator.py", line 108
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/applicake-0.0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
